--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
         <div class="feather feather3"></div>
         <div class="feather feather4"></div>
         <div class="feather feather5"></div>
-        <img src="assets/img/Parrot.png" alt="Colorful Parrot" class="parrot" />
+        <img src="https://raw.githubusercontent.com/Zentheriun/Three-Zenther/refs/heads/main/assets/img/Parrot.png" alt="Colorful Parrot" class="parrot" />
     </div>
 
     <div class="horse-container">
         <div class="mane mane1"></div>
         <div class="mane mane2"></div>
         <div class="mane mane3"></div>
-        <img src="assets/statues/Golden Horse.png" alt="Golden Horse" class="horse" />
+        <img src="https://raw.githubusercontent.com/Zentheriun/Three-Zenther/refs/heads/main/assets/statues/Golden%20Horse.png" alt="Golden Horse" class="horse" />
     </div>
 
     <div class="music-controls">
