--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <title>Who Am I - Interactive Journey</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://raw.githubusercontent.com/Zentheriun/Three-Zenther/main/assets/sources/Superfats.ttf" rel="stylesheet">
 </head>
 
 <body>
